--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SweProjectS2"
         tools:targetApi="31">
+<activity android:name=".login"
+    android:exported="false">
+
+</activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
