--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SweProjectS2"
         tools:targetApi="31">
-<activity android:name=".login"
-    android:exported="false">
-
-</activity>
+        <activity
+            android:name=".AppointmentF"
+            android:exported="false" />
+        <activity
+            android:name=".login"
+            android:exported="false"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
