--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,17 @@
         android:theme="@style/Theme.SweProjectS2"
         tools:targetApi="31">
         <activity
+            android:name=".signup"
+            android:exported="false" />
+        <activity
             android:name=".AppointmentF"
             android:exported="false" />
         <activity
+            android:name=".book"
+            android:exported="false" />
+        <activity
             android:name=".login"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
