--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:name=".AppointmentF"
             android:exported="false" />
         <activity
+            android:name=".HomePageF"
+            android:exported="false" />
+        <activity
             android:name=".book"
             android:exported="false" />
         <activity
