--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
             android:name=".book"
             android:exported="false" />
         <activity
+        android:name=".bookO"
+        android:exported="false" />
+        <activity
             android:name=".login"
             android:exported="false" />
         <activity
